update exploit credits

--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@ Try the big exploit button a few times first. Clearing your browser save data or
 <br/>
 <br/>
 This service provided by <a href="https://twitter.com/ColtonDRG">ColtonDRG</a> | <a href="https://github.com/coltondrg/stupiidhax">Source for this site</a><br/>
-All the real work was done by the <a href="https://gbatemp.net/threads/webhack-on-5-5-2.480938/">the smart people on this thread's OP</a><br/>
+This uses the <a href="https://github.com/JumpCallPop/JSTypeHax">JSTypeHax exploit by JumpCallPop</a>
 git commit <!--#include file="commit.html" -->
 </div>
